--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img class="d-block w-100" src="Imagenes/1.png" alt="First slide">
-                    <div class="texto-1">
-                        <h3>Bienvendio a CS:GO Betting</h3>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>Bienvenido a CS:GO Betting</h3>
                     </div>
                       </div>
                       <div class="carousel-item">
@@ -59,6 +59,16 @@
                     </a>
                   </div>
                 </div>
+                </section>
+
+                <section>
+                    <div class="container">
+                        <div class="Predictions-1">
+                        <a href="/Predicciones">
+                            <img src="./Imagenes/icons/icoBlog.png" alt="predictons" width="100px" height="100px">Betting prediction 1
+                        </a>
+                        </div>
+                    </div>
                 </section>
 
 
