--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                   <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="#">Inicio <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="/Predicciones/">Predicciones</a>
+                    <a class="nav-item nav-link" href="/Blog">Blog</a>
                   </div>
                 </div>
               </nav>
