--- a/Predicciones/index.html
+++ b/Predicciones/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CS:GO Betting</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/Predicciones/estilos.css">
 </head>
 <body>
 
@@ -29,7 +30,9 @@
 
                         <section>
                             <div class="container">
-                                <h1 style="text-align:center; text-decoration:underline;">PREDICCIONES</h1>
+                              <div class="titulo-predicciones">
+                                <h1>PREDICCIONES</h1>
+                              </div>
                             </div>
                         </section>
     
