--- a/Predicciones/index.html
+++ b/Predicciones/index.html
@@ -10,23 +10,33 @@
 </head>
 <body>
 
-        <section>
-                <div class="container">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                            <a class="navbar-brand" href="../index.html">CS:GO Betting</a>
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                              <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                              <div class="navbar-nav">
-                                <a class="nav-item nav-link active" href="../index.html">Inicio <span class="sr-only">(current)</span></a>
-                                <a class="nav-item nav-link" href="/Predicciones/">Predicciones</a>
-                                <a class="nav-item nav-link" href="/Blog">Blog</a>
-                              </div>
-                            </div>
-                          </nav>
-                        </div>
-                        </section>
+        <!-- Navigation -->
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="#">Start Bootstrap</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
                         <section>
                             <div class="container">
